Customized Spring banner

--- a/udemy-springboot/chuckjokes/src/main/resources/templates/index.html
+++ b/udemy-springboot/chuckjokes/src/main/resources/templates/index.html
@@ -5,8 +5,7 @@
   <title>Chuck Norris Jokes</title>
 </head>
 <body>
-<div>
-  <span th:text="${joke}">Chuck Norris power!</span>
-</div>
+<h1>Chuck Norris Quote</h1>
+  <p th:text="${joke}">Chuck Norris power!</p>
 </body>
 </html>
